test/files/pos/t1070.scala
import scala.beans.BeanProperty;
trait beanpropertytrait {
  @BeanProperty var myVariable: Long = -1l;
}
