test/files/neg/t10729/TraitAnnotation.scala
import scala.annotation.Annotation

trait TraitAnnotation extends Annotation {}

object TraitAnnotationFail {
  1: @TraitAnnotation
}